# flowstats

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: benchmarks.rs
src/: lib.rs  math.rs  traits.rs
src/cardinality/: hyperloglog.rs  mod.rs
src/frequency/: count_min.rs  mod.rs  space_saving.rs
src/membership/: bloom.rs  mod.rs
src/quantiles/: mod.rs  tdigest.rs
src/sampling/: mod.rs  reservoir.rs
src/statistics/: mod.rs  moments.rs
tests/: correctness.rs
